Removed aspectj + minor code refactoring (Driver.instance() now returns WebDriver)