@@ -2,21 +2,25 @@ package com.bspbtests.utility.driver;
 
 import com.bspbtests.constants.PathConstants;
 import com.utility.files.FilesReader;
+import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.chrome.ChromeOptions;
 import org.openqa.selenium.firefox.FirefoxOptions;
 import org.openqa.selenium.remote.AbstractDriverOptions;
 import org.openqa.selenium.remote.RemoteWebDriver;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashMap;
 
 public class Driver {
 
-    private static final ThreadLocal<RemoteWebDriver> driver = new ThreadLocal<>();
+    private static final ThreadLocal<WebDriver> driver = new ThreadLocal<>();
 
-    public static RemoteWebDriver instance() {
+
+
+    public static WebDriver instance() {
         if (driver.get() == null) {
             try {
                 driver.set(createDriver());
@@ -27,7 +31,7 @@ public class Driver {
         return driver.get();
     }
 
-    private static RemoteWebDriver createDriver() throws MalformedURLException {
+    private static WebDriver createDriver() throws MalformedURLException {
         BrowserModel browser = FilesReader.readJson(PathConstants.BROWSER_CONFIG_PATH, BrowserModel.class);
         AbstractDriverOptions options;
         switch (browser.getName()) {
@@ -53,7 +57,10 @@ public class Driver {
             }});
             put("enableVideo", true);
         }});
-        return new RemoteWebDriver(new URL("http://localhost:4444/wd/hub"), options);
+        return RemoteWebDriver.builder().
+                address(URI.create("http://localhost:4444/wd/hub")).
+                oneOf(options).
+                build();
     }
 
     public static void quit() {
